removed overflow hidden to fix hidden j

--- a/public/stylesheets/customer_dashboard.css
+++ b/public/stylesheets/customer_dashboard.css
@@ -31,7 +31,6 @@
 	line-height: .85;
 	width: 400px;
 	margin-top: 0px;
-	overflow: hidden;
 	letter-spacing: 0;
 	position: absolute;
 }
